--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .nav-link {
+    @apply relative font-semibold text-white cursor-pointer text-[17px] w-fit md:block after:block after:content-['']
+    after:absolute after:h-[3px] after:bg-[#C9CAD1] after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition
+    after:duration-300 after:origin-center hidden
+  }
+  .nav-link-mobile {
+    @apply relative mb-[2rem] font-semibold text-white cursor-pointer text-[27px] w-fit md:block after:block after:content-['']
+    after:absolute after:h-[3px] after:bg-[#C9CAD1] after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition
+    after:duration-300 after:origin-center
+  }
+}
